--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "bcrypt": "^5.0.1"
+    "nodemon": "^2.0.15"
   }
 }
