--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -15,7 +15,9 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "jest": "^27.5.1",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "jest": "^27.5.1"
   }
 }
