--- a/backend/nodejs/package.json
+++ b/backend/nodejs/package.json
@@ -18,6 +18,14 @@
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
+    "eslint": "^8.13.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^27.5.1"
-  }
+  },
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
+    "eslint.validate": ["javascript"]
+
 }
